[gd_scene format=3 uid="uid://tdr156br33s0"]

[ext_resource type="Script" uid="uid://dp7wxb6nfh7s" path="res://Scripts/game.gd" id="1_h4fw4"]
[ext_resource type="Texture2D" uid="uid://cchw0nrt5a14n" path="res://Art Assets/backgrounds/bground.png" id="2_h4fw4"]
[ext_resource type="FontFile" uid="uid://ctac5wch5ukxl" path="res://Art Assets/VCR_OSD_MONO_1.001.ttf" id="3_ldgsr"]
[ext_resource type="Texture2D" uid="uid://cxf8ehq37nht0" path="res://Art Assets/host_join_game_panel.png" id="4_o5yvi"]
[ext_resource type="Texture2D" uid="uid://fh6a7umyqk0l" path="res://Art Assets/buttons/copyCode button.png" id="5_rku1e"]
[ext_resource type="Texture2D" uid="uid://dws5dgwtiwtwh" path="res://Art Assets/buttons/host_game_button.png" id="6_rfjv2"]
[ext_resource type="Texture2D" uid="uid://b01opm63luqfi" path="res://Art Assets/buttons/join_game_button.png" id="7_1phco"]
[ext_resource type="Texture2D" uid="uid://buv67q5krfss" path="res://Art Assets/buttons/stonebutton.png" id="8_nb51f"]
[ext_resource type="Theme" uid="uid://2q3vbk6bmh2r" path="res://Themes/default_theme.tres" id="10_ldgsr"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nnt18"]
texture = ExtResource("4_o5yvi")
region_rect = Rect2(66.78863, 16.963596, 186.54053, 146.24689)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ewbju"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_85qyi"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iivbl"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7nbq1"]
texture = ExtResource("5_rku1e")
expand_margin_top = 20.0
expand_margin_right = 80.0
expand_margin_bottom = 25.0
region_rect = Rect2(89.96948, 65.87415, 140.13805, 48.172234)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_exi56"]
texture = ExtResource("6_rfjv2")
expand_margin_left = 80.0
expand_margin_top = 10.0
expand_margin_right = 80.0
expand_margin_bottom = 15.0
region_rect = Rect2(85.079185, 32.06587, 150.02844, 30.992142)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7t8sx"]
texture = ExtResource("7_1phco")
expand_margin_left = 80.0
expand_margin_top = 10.0
expand_margin_right = 80.0
expand_margin_bottom = 15.0
region_rect = Rect2(84.91611, 31.909313, 150.18684, 31.17384)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mg4q0"]
texture = ExtResource("8_nb51f")
region_rect = Rect2(67.8661, 53.960724, 184.1995, 72.08902)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vm72l"]
texture = ExtResource("8_nb51f")
region_rect = Rect2(67.8661, 53.960724, 184.1995, 72.08902)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_22asu"]
texture = ExtResource("8_nb51f")
region_rect = Rect2(67.8661, 53.960724, 184.1995, 72.08902)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fkdbe"]
texture = ExtResource("8_nb51f")
region_rect = Rect2(67.8661, 53.960724, 184.1995, 72.08902)

[node name="Game" type="Node" unique_id=631104852]
script = ExtResource("1_h4fw4")

[node name="Camera2D" type="Camera2D" parent="." unique_id=743269910]
position = Vector2(654, 553)

[node name="TextureRect" type="TextureRect" parent="." unique_id=122523752]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1266.0
offset_top = -539.5
offset_right = 655.0
offset_bottom = 539.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_h4fw4")

[node name="SpawnPoint" type="Marker2D" parent="TextureRect" unique_id=917588788]
position = Vector2(307, 563)

[node name="SpawnPoint2" type="Marker2D" parent="TextureRect" unique_id=302631236]
position = Vector2(1608, 563)

[node name="RoomLabel" type="Label" parent="." unique_id=315165037]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -439.0
offset_top = 108.0
offset_right = -122.0
offset_bottom = 161.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -10
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_ldgsr")
theme_override_font_sizes/font_size = 60
text = "ROOM NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UI" type="CanvasLayer" parent="." unique_id=432254651]

[node name="Title" type="Label" parent="UI" unique_id=896434504]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -773.0
offset_top = 100.0
offset_right = 773.0
offset_bottom = 232.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -10
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/font = ExtResource("3_ldgsr")
theme_override_font_sizes/font_size = 150
text = "CUSTOM LOBBY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Multiplayer" type="Control" parent="UI" unique_id=1379936597]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI/Multiplayer" unique_id=899256303]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -346.0
offset_top = -299.0
offset_right = 346.0
offset_bottom = 388.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_nnt18")

[node name="RoomName" type="LineEdit" parent="UI/Multiplayer" unique_id=1494022939]
unique_name_in_owner = true
layout_mode = 0
offset_left = 723.0
offset_top = 683.0
offset_right = 1199.0
offset_bottom = 732.0
theme_override_colors/font_color = Color(0.8784314, 0.78431374, 0.6039216, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_ldgsr")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_ewbju")
theme_override_styles/read_only = SubResource("StyleBoxTexture_85qyi")
theme_override_styles/focus = SubResource("StyleBoxTexture_iivbl")
placeholder_text = "Room Name..."

[node name="OIDinput" type="LineEdit" parent="UI/Multiplayer" unique_id=999393663]
unique_name_in_owner = true
layout_mode = 0
offset_left = 723.0
offset_top = 790.0
offset_right = 1199.0
offset_bottom = 839.0
theme_override_colors/font_color = Color(0.8784314, 0.78431374, 0.6039216, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_ldgsr")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_ewbju")
theme_override_styles/read_only = SubResource("StyleBoxTexture_85qyi")
theme_override_styles/focus = SubResource("StyleBoxTexture_iivbl")
placeholder_text = "Room Code..."

[node name="CopyOID" type="Button" parent="UI/Multiplayer" unique_id=1522311300]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -205.0
offset_top = 51.0
offset_right = 120.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8784314, 0.78431374, 0.6039216, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_ldgsr")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxTexture_7nbq1")
theme_override_styles/pressed = SubResource("StyleBoxTexture_7nbq1")
theme_override_styles/hover = SubResource("StyleBoxTexture_7nbq1")
theme_override_styles/disabled = SubResource("StyleBoxTexture_7nbq1")
text = "COPY CODE"

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Multiplayer" unique_id=1071179731]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.5
offset_top = -252.0
offset_right = 162.5
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Host" type="Button" parent="UI/Multiplayer/VBoxContainer" unique_id=1203039146]
layout_mode = 2
theme_override_colors/font_color = Color(0.8784314, 0.78431374, 0.6039216, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_ldgsr")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxTexture_exi56")
theme_override_styles/pressed = SubResource("StyleBoxTexture_exi56")
theme_override_styles/hover = SubResource("StyleBoxTexture_exi56")
theme_override_styles/disabled = SubResource("StyleBoxTexture_exi56")
text = "HOST GAME"

[node name="Join" type="Button" parent="UI/Multiplayer/VBoxContainer" unique_id=394878488]
layout_mode = 2
theme_override_colors/font_color = Color(0.8784314, 0.78431374, 0.6039216, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_ldgsr")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxTexture_7t8sx")
theme_override_styles/pressed = SubResource("StyleBoxTexture_7t8sx")
theme_override_styles/hover = SubResource("StyleBoxTexture_7t8sx")
theme_override_styles/disabled = SubResource("StyleBoxTexture_7t8sx")
text = "JOIN GAME"

[node name="FindMatch" type="Button" parent="UI/Multiplayer/VBoxContainer" unique_id=1589667363]
layout_mode = 2
theme_override_colors/font_color = Color(0.8784314, 0.78431374, 0.6039216, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 45
text = "FIND MATCH"

[node name="OnlineID" type="Label" parent="UI/Multiplayer" unique_id=2127689275]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -146.5
offset_top = -19.0
offset_right = 146.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8784314, 0.78431374, 0.6039216, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_ldgsr")
theme_override_font_sizes/font_size = 50
text = "LOADING..."
horizontal_alignment = 1

[node name="Back" type="Button" parent="UI/Multiplayer" unique_id=1559351241]
layout_mode = 0
offset_left = 1646.0
offset_top = 897.0
offset_right = 1791.0
offset_bottom = 967.0
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_ldgsr")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_mg4q0")
theme_override_styles/pressed = SubResource("StyleBoxTexture_vm72l")
theme_override_styles/hover = SubResource("StyleBoxTexture_22asu")
theme_override_styles/disabled = SubResource("StyleBoxTexture_fkdbe")
text = "BACK"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="." unique_id=729451953]
_spawnable_scenes = PackedStringArray("uid://dcq8wnaiijaee")
spawn_path = NodePath("..")

[node name="NetworkInfo" type="Label" parent="." unique_id=266358179]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -294.0
offset_top = 174.0
offset_right = -254.0
offset_bottom = 218.0
grow_horizontal = 2
theme = ExtResource("10_ldgsr")
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 50
text = "1"

[connection signal="pressed" from="UI/Multiplayer/CopyOID" to="." method="_on_copy_oid_pressed"]
[connection signal="pressed" from="UI/Multiplayer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="UI/Multiplayer/VBoxContainer/Join" to="." method="_on_join_pressed"]
